<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.knownhosts</groupId>
  	<artifactId>libfindchars-parent</artifactId>
    <version>0.0.4</version>
  	<name>libfindchars parent</name>
  	<description>SIMD optimized character detection library</description>
    <packaging>pom</packaging>
  	 <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
	<dependencies>
		<dependency>
	    	<groupId>org.junit.jupiter</groupId>
	   		<artifactId>junit-jupiter-api</artifactId>
	    	<version>5.10.1</version>
	    	<scope>test</scope>
		</dependency>
	    <dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.10.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-runner</artifactId>
			<version>1.10.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
	    <finalName>${project.artifactId}-${project.version}</finalName>
	    <pluginManagement>
	        <plugins>
	            <plugin>
	                <groupId>org.apache.maven.plugins</groupId>
	                <artifactId>maven-compiler-plugin</artifactId>
	                <version>3.11.0</version>
	
	                <configuration>
	                    <!-- When compilers say false, they mean true ...
	                         https://issues.apache.org/jira/browse/MCOMPILER-209 -->
	                    <useIncrementalCompilation>false</useIncrementalCompilation>
	                   
	                    <maxmem>512m</maxmem>
	                    <meminitial>256m</meminitial>
	                    <encoding>UTF-8</encoding>
	
	                    <release>21</release>
	
	
	                    <!-- IntelliJ needs these https://youtrack.jetbrains.com/issue/IDEA-195472 -->
	                    <source>21</source>
	                    <target>21</target>
	
	                    <debug>true</debug>
	                    <debuglevel>lines,vars,source</debuglevel>
	                    <!-- [#2413] Make compiler warnings a bit more visible
	                         But don't fail (yet) -->
	                    <compilerArgs>
	                        <arg>--enable-preview</arg>
	                        <arg>--add-modules=ALL-SYSTEM</arg>
	                    </compilerArgs>
	                    <annotationProcessorPaths>
					        <path>
					          <groupId>org.openjdk.jmh</groupId>
					          <artifactId>jmh-generator-annprocess</artifactId>
					          <version>1.37</version>
					        </path>
		      			</annotationProcessorPaths>
	                </configuration>
	            </plugin>
	                <plugin>
      					<groupId>org.apache.maven.plugins</groupId>
					    <artifactId>maven-surefire-plugin</artifactId>
		                <version>3.2.3</version>
					    <configuration>
					      <argLine>--enable-preview --add-modules=jdk.incubator.vector --add-modules=ALL-SYSTEM</argLine>
					    </configuration>
					   <dependencies>
		                <dependency>
		                    <groupId>org.apache.maven.surefire</groupId>
		                    <artifactId>surefire-junit-platform</artifactId>
		                    <version>3.2.3</version>
		                </dependency>
            			</dependencies>
                    </plugin>
                    
	            </plugins>
	    </pluginManagement>
	</build>
	<modules>
		<module>libfindchars-api</module>
		<module>libfindchars-compiler</module>
		<module>libfindchars-examples</module>
		<module>libfindchars-bench</module>
	</modules>
</project>